--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,19 +3,36 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	
+	
 	/* border-style: solid;
 	border-width: 1px; */
 }
+html {
+	height: 100%;;
+	width: 100%;
+	
+	 	
+}
 /* Set background image and general font */
 body {
+	height: 100%;
 	font-family: 'Source Sans Pro';
-	/* background-image: url("images/meeting.png"); */
-    background-color: #00BFFF;
-	background-position: 0 7em;
-	background-size: 100%;
+	font-size: 24px;
+	
+	
+}
+
+.container {
+	background: -webkit-linear-gradient(left top, #00BFFF, #00FA9A); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(bottom right, #00BFFF, #00FA9A); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(bottom right, #00BFFF, #00FA9A); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(to bottom right, #00BFFF, #00FA9A); /* Standard syntax (must be last) */
 	background-repeat: no-repeat;
-	min-height: 500px;
-    font-size: 24px;
+
+	min-height: 100%;
+	padding: 20px;
+	margin: 0 auto -50px;
 }
 
 /* Header content */
@@ -31,6 +48,9 @@ body {
 
 h1 {
     font-size: 5em;
+	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+	             0px 8px 13px rgba(0,0,0,0.1),
+				 0px 18px 23px rgba(0,0,0,0.1);
 }
 
 .user-input {
@@ -40,12 +60,13 @@ h1 {
     font-size: 18px;
     box-sizing: border-box;
     border-radius: 10px;
-    border: 1px solid #1E90FF;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
 }
 
 .content {
     color: white;
     margin-left: 10em;
+	padding-bottom: 3em; /* same height as footer */
 }
 .content>h2{
     font-size: 4em;
@@ -54,22 +75,21 @@ h1 {
 }
 
 .content>p {
-    font-size: 2.5em;
+    font-size: 3em;
     display: inline;
 }
 /* footer content */
-
+.push, .footer {
+	height: 50px;
+}
 .footer {
-	clear: both;
-	background-color: #333;
-	position: relative;
-	z-index: 5;
-	height: 3em;
-	margin-top: -3em;
-	text-align: center;
+	width: 100%;
 	color: white;
-	padding-top:1em;
 	font-size: 0.5em;
+	text-align: center;
+	background-color: #333;
+	line-height: 50px;
+
 }
 
 
