--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,7 +47,7 @@ body {
 }
 
 h1 {
-    font-size: 5em;
+    font-size: 8vw;
 	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
 	             0px 8px 13px rgba(0,0,0,0.1),
 				 0px 18px 23px rgba(0,0,0,0.1);
