--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,12 +45,28 @@ body {
 	position: relative;
     color: white;
 }
-
 h1 {
-    font-size: 8vw;
 	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
 	             0px 8px 13px rgba(0,0,0,0.1),
 				 0px 18px 23px rgba(0,0,0,0.1);
+}
+
+@media all and (min-width: 960px) {
+h1{
+	font-size: 5em;
+}		 
+}
+
+@media all and (max-width: 959px) and (min-width: 600px) {
+h1{
+	font-size: 5vw;
+}
+}
+
+@media all and (max-width: 599px) and (min-width: 50px) {
+h1{
+	font-size: 6vw;
+}
 }
 
 .user-input {
